--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
 {
     "name":"wp-plugin-fallback/wp-stateless",
-    "description":"the wp-stateless plugin",
+    "description":"the wp-stateless plugin"
   }
